# Pygame-RTS

./: .gitignore  .pre-commit-config.yaml  CondaRTS.py  CondaRTS2DVersion.py  CondaRTSIsometricVersion.py  README.md  pyproject.toml
modules/: ai.py  ai_2d.py  ai_iso.py  constants_2d.py  constants_iso.py  data.py  data_2d.py  data_iso.py  draw_2d.py  draw_iso.py  fog_of_war.py  fonts.py  game_console.py  game_data.py  game_data_2d.py  game_data_iso.py  game_manager.py  game_manager_2d.py  game_manager_iso.py  game_object_2d.py  game_object_iso.py  game_state.py  geometry.py  particle.py  particles.py  pathfinding_iso.py  production_interface.py  production_interface_2d.py  production_interface_iso.py  projectile_2d.py  projectile_iso.py  screens.py  spatial_hash.py  team.py  terrain_feature_iso.py  typing.py  unit_stats_2d.py  units_2d.py  units_iso.py  world.py  (+2 more)
modules/ai/: __init__.py  ai_2d.py  ai_iso.py
modules/camera/: __init__.py  camera.py  camera_2d.py  camera_generic.py  camera_iso.py
modules/game_data/: __init__.py  game_data_2d.py  game_data_generic.py  game_data_iso.py
modules/game_manager/: __init__.py  game_manager_2d.py  game_manager_generic.py  game_manager_iso.py
modules/game_object/: __init__.py  game_object.py  game_object_2d.py  game_object_generic.py  game_object_iso.py
modules/production_interface/: __init__.py  production_interface_2d.py  production_interface_generic.py  production_interface_iso.py
modules/projectile/: __init__.py  generic_projectile.py  projectile_2d.py  projectile_generic.py  projectile_iso.py
modules/unit_stats/: __init__.py  unit_stats.py  unit_stats_2d.py  unit_stats_generic.py  unit_stats_iso.py
modules/units/: __init__.py  units_2d.py  units_iso.py
src/: ai.py  building.py  camera.py  constants.py  draw_utils.py  fog_of_war.py  game.py  game_object.py  geometry.py  harvester.py  infantry.py  iron_field.py  particle.py  player_interface.py  projectile.py  tank.py  team.py  turret.py
src/game_objects/: game_object.py
src/game_objects/buildings/: __init__.py  barracks.py  building.py  headquarters.py  power_plant.py  turret.py  war_factory.py
src/game_objects/units/: __init__.py  harvester.py  infantry.py  tank.py  unit.py
tests/: test_2d.py  test_iso.py
