[project]
name = "CondaRTS"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclass-wizard>=0.39.1",
    "pygame-ce>=2.5.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 120  # for both linter and formatter

[tool.ruff.lint]
future-annotations = true
select = [
    "ANN", # flake8-annotations
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "FBT", # flake8-boolean-trap
    "I", # isort
    "TC", # flake8-type-checking
    "UP", # pyupgrade
]
ignore = [
    "COM812", # missing-trailing-comma: conflicts with formatter
    "D203", "D213", # format choices
    "EM", # flake8-errmsg
    "FIX",
    "TD",
    "TRY", # tryceratops
]
extend-safe-fixes = [
    "TC",
]

[tool.ruff.lint.per-file-ignores]
"CondaRTSIsometricVersion.py" = [
    "ANN",
    "D",
    "E",
    "E501", # line-too-long
    "F841",
    "FBT",
]
"modules/*.py" = [
    "D",
]
"modules/draw_2d.py" = [
    "ANN001", # missing-type-function-argument
]
"modules/camera/*.py" = [
    "ANN001", # missing-type-function-argument: keys
]
"modules/production_interface.py" = [
    "FBT003", # boolean-positional-value-in-call: pg.Font calls
]
"modules/screens.py" = [
    "ANN401", # any-type
    "FBT003", # boolean-positional-value-in-call: pg.Font calls
]
"tests/*.py" = [
    "D",
]

[tool.pyrefly]
project-includes = [
    "modules",
]
