[project]
name = "CondaRTS"
version = "0.1.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pygame-ce>=2.5.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 120  # for both linter and formatter

[tool.ruff.lint]
future-annotations = true
select = [
    "ALL"
]
ignore = [
    "B905", # zip-without-explicit-strict
    "C", # mmcabe
    "COM812", # missing-trailing-comma: conflicts with formatter
    "D203", "D213", # format choices
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D200",
    "D205",
    "D401",
    "E721", # type-comparison
    "ERA001", # commented-out-code
    "EM", # flake8-errmsg
    "FIX", # flake8-fixme
    "PLC", # Pylint
    "PLR", # Pylint
    "RUF012", # mutable-class-default
    "S311",  # suspicious-non-cryptographic-random-usage
    "SIM108", # if-else-block-instead-of-if-exp
    "TD",
    "TRY", # tryceratops
]
extend-safe-fixes = [
    "TC",
]

[tool.ruff.lint.per-file-ignores]
"modules/draw_*.py" = [
    "ANN001", # missing-type-function-argument
    "FBT003", # boolean-positional-value-in-call: pg.Font calls
]
"modules/camera/*.py" = [
    "ANN001", # missing-type-function-argument: keys
]
"modules/production_interface_*.py" = [
    "FBT003", # boolean-positional-value-in-call: pg.Font calls
]
"modules/screens.py" = [
    "ANN401", # any-type
    "FBT003", # boolean-positional-value-in-call: pg.Font calls
]
"tests/*.py" = [
    "D",
    "S101",  # assert
]

[tool.pyrefly]
project-includes = [
    "modules",
]
preset = "strict"