[project]
name = "CondaRTS"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pygame-ce>=2.5.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 120  # for both linter and formatter

[tool.ruff.lint]
future-annotations = true
select = [
    "ALL"
]
ignore = [
    "B905", # zip-without-explicit-strict
    "C", # mmcabe
    "COM812", # missing-trailing-comma: conflicts with formatter
    "D203", "D213", # format choices
    "D101", # undocumented-public-class
    "D102", # method
    "D103", # function
    "D105", # magic-method
    "D107", # public-init
    "D205", # missing-blank-line-after-summary
    "D401", # non-imperative_mood
    "E721", # type-comparison
    "ERA001", # commented-out-code
    "EM", # flake8-errmsg
    "FIX", # flake8-fixme
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "RUF012", # mutable-class-default
    "S311",  # suspicious-non-cryptographic-random-usage
    "SIM108", # if-else-block-instead-of-if-exp
    "TD",
    "TRY", # tryceratops
]
extend-safe-fixes = [
    "TC",
]

[tool.ruff.lint.per-file-ignores]
"modules/ai/*.py" = [
    "PLR0911", # too-many-return-statements
    "PLR0915", # too-many-statements
]
"modules/camera/*.py" = [
    "ANN001", # missing-type-function-argument: keys
]
"modules/draw_*.py" = [
    "ANN001", # missing-type-function-argument
    "FBT003", # boolean-positional-value-in-call: pg.Font calls
    "PLR0915", # too-many-statements
]
"modules/game_data/*.py" = [
    "PLR0915", # too-many-statements
]
"modules/game_manager/*.py" = [
    "PLR0915", # too-many-statements
]
"modules/production_interface/*.py" = [
    "FBT003", # boolean-positional-value-in-call: pg.Font calls
]
"modules/screens.py" = [
    "ANN401", # any-type
    "FBT003", # boolean-positional-value-in-call: pg.Font calls
    "PLR0915", # too-many-statements
]
"modules/units/*.py" = [
    "PLR0915", # too-many-statements
]
"tests/*.py" = [
    "D",
    "S101",  # assert
]

[tool.pyrefly]
project-includes = [
    "modules",
]
preset = "strict"
